; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_dump_prefix_get.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_dump_prefix_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prof_dump_filename_mtx = common dso_local global i32 0, align 4
@prof_dump_prefix = common dso_local global i8* null, align 8
@opt_prof_prefix = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @prof_dump_prefix_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @prof_dump_prefix_get(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @malloc_mutex_assert_owner(i32* %3, i32* @prof_dump_filename_mtx)
  %5 = load i8*, i8** @prof_dump_prefix, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i8*, i8** @opt_prof_prefix, align 8
  br label %11

9:                                                ; preds = %1
  %10 = load i8*, i8** @prof_dump_prefix, align 8
  br label %11

11:                                               ; preds = %9, %7
  %12 = phi i8* [ %8, %7 ], [ %10, %9 ]
  ret i8* %12
}

declare dso_local i32 @malloc_mutex_assert_owner(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
